# hyperbright

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
dep/: CMakeLists.txt
dep/glad/: glad.cpp
inc/glad/: glad.h
rsc/models/: car_body.mtl  powerup.mtl  tile.mtl  tile_edge.mtl  transformer.mtl  wall.mtl  wheel.mtl
rsc/shaders/: fragment.glsl  quad_fragment.glsl  quad_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/: Ai.cpp  Ai.h  AiManager.cpp  AiManager.h  Arena.cpp  Arena.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  DevUI.cpp  DevUI.h  Engine.cpp  Engine.h  FontTest.cpp  FontTest.h  Light.h  Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  MeshUtils.h  Model.cpp  Model.h  ObjModel.cpp  ObjModel.h  Pickup.cpp  Pickup.h  PickupManager.cpp  PickupManager.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Simulate.cpp  Simulate.h  SnippetUtils.cpp  (+14 more)
src/ai/: Ai.cpp  Ai.h  AiManager.cpp  AiManager.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/engine/: Controller.cpp  Controller.h  Engine.cpp  Engine.h  TeamStats.cpp  TeamStats.h
src/entity/: Arena.cpp  Arena.h  ChargingStation.cpp  ChargingStation.h  Pickup.cpp  Pickup.h  PickupManager.cpp  PickupManager.h  SkyBox.cpp  SkyBox.h  Vehicle.cpp  Vehicle.h
src/model/: Mesh.cpp  Mesh.h  MeshUtils.h  Model.cpp  Model.h
src/opengl-helper/: CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/physics/: Interface.h  Simulate.cpp  Simulate.h  SnippetVehicle4WCreate.cpp  SnippetVehicleCreate.cpp  SnippetVehicleCreate.h  SnippetVehicleFilterShader.cpp  SnippetVehicleTireFriction.cpp
src/render/: Camera.cpp  Camera.h  IRenderable.cpp  IRenderable.h  Light.h  Renderer.cpp  Renderer.h
src/ui/: DevUI.cpp  DevUI.h  HUD.cpp  HUD.h  LoadingScreen.cpp  LoadingScreen.h  Menu.cpp  Menu.h
